--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,23 @@
-body{
+body {
     margin: auto;
 
 }
 .page-title{
-    font-size: xx-large;
+    font-size: 40px;
     text-align: center;
+    margin: 30px;
 }
-
-#index-subhead {
+.subhead {
     text-align: center;
     font-size: x-large;
 }
-
-.row {
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  
-  /* Create four equal columns that sits next to each other */
-  .column {
-    -ms-flex: 25%; /* IE10 */
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 70%;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      -ms-flex: 50%;
-      flex: 50%;
-      max-width: 50%;
-    }
-
   
   p {
     font-size:large ;
     text-align: center;
   }
   
-  }
+  
   ul.myul {
     text-align: center;
     list-style-position: inside;
@@ -81,9 +50,11 @@ body{
   .button2{background-color: rgb(255, 255, 255);}
   .button3{background-color: rgb(247, 5, 5);}
 
-  img.wt {
-    margin: auto;
-    position: fixed;
-    left: 0;
-    right: 0;
+  .contact-links {
+    text-align: center;
+    align-content: center;
+    font-size: x-large;
+    padding: 10px;
+    margin: 10;
   }
+  
