--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-
+ background-color: blue;
 }
 .page-title{
     font-size: 40px;
@@ -10,6 +10,7 @@ body {
 .subhead {
     text-align: center;
     font-size: x-large;
+    
 }
   
   p {
@@ -55,6 +56,7 @@ body {
     align-content: center;
     font-size: x-large;
     padding: 10px;
-    margin: 10;
+    margin: 10px;
+    background-color:blue;
   }
   
